# GhettoRecorder

./: .gitignore  MANIFEST.in  README.md  README.rst  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  tsconfig.json
.github/: README.rst
docs/source/: README.rst  conf.py  ghettorecorder.rst  ghettorecorder.test.rst  index.rst  modules.rst
ghettorecorder/: __init__.py  __main__.py  api.py  audio_conf.py  blacklist.json  cmd.py  ghetto_agents.py  ghetto_api.py  ghetto_api_feeder.py  ghetto_blacklist.py  ghetto_container.py  ghetto_db_worker.py  ghetto_header_aac.py  ghetto_header_mp3.py  ghetto_http_simple.py  ghetto_http_srv.py  ghetto_ini.py  ghetto_menu.py  ghetto_meta.py  ghetto_net.py  ghetto_procenv.py  ghetto_recorder.menu_info  ghetto_recorder.py  ghetto_utils.py  index.html  schema.sql  settings.ini
ghettorecorder/static/css/: style.css
ghettorecorder/static/js/: animate.js  doubleDecker.js  index.js  rest.js  spectrumAnalyzer.js
ghettorecorder/static/ts/: animate.ts  doubleDecker.ts  index.ts  rest.ts  setupTS.txt  spectrumAnalyzer.ts
ghettorecorder/test/: test_queue.py  test_queues.py
snap/: snapcraft.yaml
snap/gui/: ghetto_url_05.desktop
