[build-system]
requires = ["setuptools >= 42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GhettoRecorder"
version = "3.0"
description = "command line internet radio grabber with listen capabilities"
authors = [{name = "René Horn", email = "rene_horn@gmx.net" }]
keywords = ['internet radio grabber']
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.7"


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
	"aacRepair>=0.3",
	"certifi>=2022.12.07",
	"configparser>=5.0.2",
]

[project.urls]
homepage = "https://github.com/44xtc44"
documentation = "https://GhettoRecorder.readthedocs.io/"
repository = "https://github.com/44xtc44/GhettoRecorder"

[project.scripts]
ghettorecorder = "ghettorecorder.cmd:main"
